sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1: error: not enough arguments for method bubbleSort: (list: Array[Char])Array[Char].
Unspecified value parameter list.
		bubbleSort();
                          ^AlgBubbleSort1:14: error: not found: value k
  }while(k!=0)
         ^